[package]
name = "ibc-orderbook"
edition       = { workspace = true }
version       = { workspace = true }
authors       = { workspace = true }
exclude       = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-schema   = { workspace = true}
cosmwasm-std      = { workspace = true}
cosmwasm-storage  = { workspace = true}
cw-storage-plus   = { workspace = true}
cw-utils          = { workspace = true}
cw2               = { workspace = true}
cw20              = { workspace = true}
cw20-base         = { workspace = true}
schemars          = { workspace = true}
serde             = { workspace = true}
thiserror         = { workspace = true}
getrandom         = { workspace = true} 

[dev-dependencies]
cw-multi-test     = { workspace = true}
